# meson-python-reproducer646

./: README.md  constraints-dev.txt  meson.build  pyproject.toml
.github/workflows/: pytest.yml
src/reproducer646/: __init__.py  meson.build  some_module.c
src/reproducer646/test/: test_some_module2.py
